# HOT_Control_App

./: .gitignore  CMakeLists.txt  FEATURE_IMPLEMENTATION.md  README.md  bugs-features-loic.tasks  readme_for_python.txt
docs/: hologram-logic-implementation-plan.md
resources/: light_theme.qss  resources.qrc  spin_down_dark.xpm  spin_down_light.xpm  spin_up_dark.xpm  spin_up_light.xpm  theme.qss
src/: main.cpp
src/camera/: cameramanager.cpp  cameramanager.h
src/core/: patterngenerator.cpp  patterngenerator.h
src/core/algorithms/: gs_algorithm.cpp  gs_algorithm.h  gs_algorithm_cuda.cu  gs_algorithm_cuda.h
src/hardware/: Image_Control.ini  Image_Control.lib
src/ui/: controlpanel.cpp  controlpanel.h  hologramdialog.cpp  hologramdialog.h  mainwindow.cpp  mainwindow.h  monitorpanel.cpp  monitorpanel.h  settingsdialog.cpp  settingsdialog.h  sourceintensitydialog.cpp  sourceintensitydialog.h
src/ui/components/: arrowspinbox.h  patternpresetswidget.cpp  patternpresetswidget.h  targetgridwidget.cpp  targetgridwidget.h
